--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ body{
 .site-navigation li:last-child a{
 	padding-left: 14px;
 }
+
 .index-logo img{
 	display: block;
 }
@@ -88,7 +89,6 @@ body{
 	left: 50%;
 	transform: translateX(-50%);
 }
-
 /************** Прям пиксельное выравнивание менюшек по макету *****************/
 
 /***********************************/
@@ -235,6 +235,7 @@ body{
 	font-size: 30px;
 	line-height: 36px;
 	padding-top: 48px;
+
 }
 .interested p{
 	font-size: 14px;
@@ -245,14 +246,12 @@ body{
 	display: flex;
 	flex-wrap: wrap;
 	margin: 0 auto;
-	align-items: center;
 	justify-content: center;
 	box-sizing: border-box;
-	padding: 10px;
 	width: 570px;
-	min-height: 87px;
 	text-decoration: none;
 	background-color: #766357;
+	
 }
 .interested a:hover{
 	background-color: #604e43;
@@ -264,14 +263,21 @@ body{
 	color: rgba(255,255,255,0.3);
 }
 .interested a > h2{
+	display: flex;
+	align-items: center;
 	font-size: 21px;
 	line-height: 24px;
 	color: #eee;
+	min-height: 87px;
 }
 
 /******** поиск гостиницы в седоне *******/
-.visually-hidden{
-	display: block;
+
+.opacity-zero{
+	opacity: 0;
+}
+.visually-show{
+	opacity: 1;
 }
 .search-hostel{
 	position: absolute;
@@ -297,7 +303,8 @@ body{
 .search-hostel .departure{
 	margin-bottom: 32px;	
 }
-.search-hostel label{
+.search-hostel label.arrival-label,
+.search-hostel label.departure-label{
 	width: 112px;
 	text-align: left;
 }
@@ -308,6 +315,7 @@ body{
 .search-hostel .departure input{
 	width: 346px;
 }
+/*
 .search-hostel .arrival label::after,
 .search-hostel .departure label::after{
 	position: absolute;
@@ -317,20 +325,70 @@ body{
 	height: 22px;
 	content: "";
 	background: url("../img/calendar.svg") no-repeat center;
+}*/
+.search-hostel .arrival svg{
+	position: absolute;
+	top: 62px;
+	right: 65px;
+	fill: #cacaca;
+	transition: 0.2s;
+}
+.search-hostel .arrival svg:hover{
+	fill: #666666;
+}
+.search-hostel .arrival svg:focus{
+	fill: #81b3d2;
+}
+.search-hostel .departure svg{
+	position: absolute;
+	top: 126px;
+	right: 65px;
+	fill: #cacaca;
+	transition: 0.2s;	
+}
+.search-hostel .departure svg:hover{
+	fill: #666666;
+}
+.search-hostel .departure svg:focus{
+	fill: #81b3d2;
+}
+.search-hostel .adults-children .adults,
+.search-hostel .adults-children .children{
+	display: flex;
+	box-sizing: border-box;
+	width: 50%;
+	justify-content: space-between;
+	align-items: center;
+}
+.search-hostel .adults-children .children {
+	padding-left: 52px;
+}
+.search-hostel .adults-children .adults-input,
+.search-hostel .adults-children .children-input {
+	position: relative;
+	display: flex;
 }
 .search-hostel .adults-children input{
 	text-align: center;
-	padding-left: 22px;
-	width: 115px;
-	-webkit-appearance: none;
-	appearance: none;
+	padding-left: 20px;
+	width: 68px;
 }
-.search-hostel .adults label{
-	padding-right: 35px;
+.search-hostel .adults-children .minus,
+.search-hostel .adults-children .plus{
+	display: block;	
+	width: 24px;
+	background-color: #f2f2f2;
 }
-.search-hostel .children label{
-	padding: 0 20px 0 52px;
+.minus {
+	background: url("../img/minus.svg") no-repeat center;
+	background-position: 100% 50%;
 }
+.plus{
+	background: url("../img/plus.svg") no-repeat center;
+	background-position: 0% 50%;
+}
+
+/*
 .search-hostel .adults label::before{
 	position: absolute;
 	top: 205px;
@@ -338,6 +396,7 @@ body{
 	content: "";
 	width: 12px;
 	height: 3px;
+	background-color: #a9a9a9;
 	background: url("../img/minus.svg") no-repeat center;
 }
 .search-hostel .adults label::after{
@@ -367,7 +426,7 @@ body{
 	height: 11px;
 	background: url("../img/plus.svg") no-repeat center;
 }
-
+*/
 .search-hostel label{
 	font-size: 14px;
 	line-height: 26px;
@@ -456,7 +515,7 @@ body{
 	align-items: center;
 }
 .social-item {
-	flex-basis: 47px;
+	/*flex-basis: 47px;*/
 }
 .social-item a{
 	display: flex;
@@ -467,15 +526,26 @@ body{
 	width: 47px;
 	height: 48px;
 	background-color: #81b3d2;
+	transition: 0.2s;
 }
 .social-item:last-child{
 	margin-right: 0;
+}
+.social-item svg #twitter-svg,
+.social-item svg #fb-svg,
+.social-item svg #youtube-svg{
+	transition: 0.2s;
 }
 .social-item a:hover{
 	background-color: #669ec0;
 }
 .social-item a:focus{
 	background-color: #5496bd;
+}
+.social-item a:focus svg #twitter-svg,
+.social-item a:focus svg #fb-svg,
+.social-item a:focus svg #youtube-svg{
+	fill: rgba(255,255,255,0.3);
 }
 .copyright p{
 	margin: 0;
@@ -484,22 +554,38 @@ body{
 .copyright a{
 	height: 41px;
 }
+.copyright svg #HA-svg{
+	transition: 0.2s;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+	-o-transition: 0.2s;
+}
+.copyright svg:hover #HA-svg{
+	fill: #81b3d2;
+}
+.copyright svg:focus #HA-svg{
+	fill: rgba(0,0,0,0.3);
+}
 /*
 ---------------  HOTEL.HTML --------------------------------------------- <--
 */
 .found {
 	display: flex;
-	min-height: 86px;
-	align-items: center;
+	/*min-height: 86px;*/
+	/*align-items: center;*/
 	background-color: #ffffff;
 	border-bottom: 1px solid #e5e5e5;
 }
 .found h2{
-	display: block;
-	padding: 0 50px 0 70px;
+	display: flex;
+	align-items: center;
+	min-height: 86px;
+	padding-left: 70px;
+	padding-right: 50px;
 }
 .arrows{
 	display: flex;
+	align-items: center;
 	margin-left: auto;
 	margin-right: 65px;
 }
@@ -529,9 +615,9 @@ body{
 }
 .found-list {
 	display: flex;
-	flex-wrap: wrap;
 	align-items: center;
-	max-width: 850px;
+	flex-wrap: wrap;
+	max-width: 850px
 }
 .found-list li{
 	padding-right: 33px;
@@ -694,23 +780,58 @@ body{
 .selection-list-2{
 	position: relative;
 }
+/*
 .selection-form 
 .form-block label::before{
 	content: "";
 	display: inline-block;
 	width: 26px;
 	height: 23px;
-	background: url("../img/checkbox-off.svg") no-repeat;
+	//background: url("../img/checkbox-off.svg") no-repeat;
 	margin-right: 14px;
 }
+*/
 .form-block .visually-hidden{
+	display: block;
 	opacity: 0;
 }
+.form-block fieldset li{
+	position: relative;
+}
+.form-block fieldset svg{
+	position: absolute;
+	left: 0px;
+	z-index: 1;
+}
+.form-block fieldset svg.cb-off{
+	display: inline-block;
+}
+.form-block fieldset svg.cb-on{
+	display: none;
+}
+.form-block fieldset label{
+	position: relative;
+	padding-left: 40px;
+	z-index: 2;
+}
+.form-block fieldset input:disabled ~ svg path{
+	fill: #6a6a6a;
+}
+.form-block fieldset input:disabled ~ label{
+	color: #6a6a6a;
+}
+.form-block fieldset input:checked ~ svg.cb-off{
+	display: none;
+}
+.form-block fieldset input:checked ~ svg.cb-on{
+	display: inline-block;
+}
+/*
 .form-block .visually-hidden:focus + label {
 	outline: 2px solid #81b3d2;
 }
 #pool:checked ~ label[for="pool"]::before {
-	background-image: url("../img/checkbox-on.svg");
+	//background: url("../img/checkbox-on.svg") no-repeat;
 }
 #parking:checked ~ label[for="parking"]::before {
 	background-image: url("../img/checkbox-on.svg");
@@ -728,6 +849,11 @@ body{
 #apartments:checked ~ label[for="apartments"]::before {
 	background-image: url("../img/checkbox-on.svg");
 }
+
+.selection-list-1 input:disabled ~ label::before{
+	background-image: url("../img/checkbox-on.svg");
+	fill: #123;	
+}*/
 /*********************************/
 
 .selection-list-1 li,
@@ -770,7 +896,7 @@ body{
 .price-controls label {
 	display: inline-block;
   	font-size: 14px;
-  	line-height: 31px;
+  	/*line-height: 31px;*/
   	vertical-align: top;
   	cursor: pointer;
 }
@@ -822,6 +948,7 @@ body{
 }
 .range-toggle:hover {
  	background: #1c4f80;
+ 	transform: scale(1.1)
 }
 .button-show{
 	display: block;
